--- a/public/sass/mixins.sass
+++ b/public/sass/mixins.sass
@@ -44,6 +44,10 @@
   justify-content: space-evenly
   -webkit-justify-content: space-around
 
+@mixin align-items-stretch
+  align-items: stretch
+  -webkit-align-items: stretch
+
 @mixin space-between-last-row
   &::after
     content: ""
